--- a/views/create.hbs
+++ b/views/create.hbs
@@ -5,6 +5,7 @@
     <meta charset="utf-8" />
 </head>
 <body>
+{{> menu}}
     <h1>Добавление пользователя</h1>
      <form action="postUser" method="POST">
         <label>Имя</label>
