--- a/views/users.hbs
+++ b/views/users.hbs
@@ -5,6 +5,7 @@
     <meta charset="utf-8" />
 </head>
 <body>
+{{> menu}}
     <a href="/user/create">Добавить пользователя</a>
     <h1>Список пользователей</h1>
      <table>
